<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_assignment"
            android:title="@string/menu_services" />
        <item
            android:id="@+id/nav_clients"
            android:icon="@drawable/ic_people"
            android:title="@string/menu_clients" />
        <item
            android:title="Contact us">
            <menu>
                <item
                    android:id="@+id/nav_contact"
                    android:icon="@drawable/ic_email"
                    android:title="@string/menu_contact" />
                <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/menu_about" />
>
            </menu>
        </item>
    </group>
</menu>
